--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen:types": "typechain --target ethers-v5 --out-dir src/shared/contracts 'src/shared/abi/*.json'"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -15,9 +16,16 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "ethers": "^5",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "wagmi": "^0.11.4"
+  },
+  "devDependencies": {
+    "@typechain/ethers-v5": "^10.2.0",
+    "eslint-config-prettier": "^8.6.0",
+    "typechain": "^8.1.1"
   }
 }
